// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Creator/Steps/Exit Step Active 1`] = `
.c11 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #d94c4c;
}

.c11 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c13 .c10 {
  color: #fff;
}

.c14 .c10 {
  color: #6e849a;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c3 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c9 {
  width: 16px;
  margin-right: 16px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c6 .c7:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c15 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px #5d9df5;
}

.c4 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c12 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

<div
  className="c0"
>
  <header
    className="c1"
  >
    <span
      className="c2"
    >
      Exit Block
    </span>
  </header>
  <section
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5 c6"
      >
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          >
            <span
              className="c10 c11"
              color="#d94c4c"
              size={16}
            >
              <svg
                data-file-name="SvgExit"
              />
            </span>
          </div>
          <span
            className="c12"
          >
            Skill ends in current state
          </span>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Storyshots Creator/Steps/Exit Step Alexa 1`] = `
.c11 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #d94c4c;
}

.c11 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c13 .c10 {
  color: #fff;
}

.c14 .c10 {
  color: #6e849a;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c3 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c9 {
  width: 16px;
  margin-right: 16px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c6 .c7:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px rgba(17,49,96,0.08);
}

.c4 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c15 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c12 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

<div
  className="c0"
>
  <header
    className="c1"
  >
    <span
      className="c2"
    >
      Exit Block
    </span>
  </header>
  <section
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5 c6"
      >
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          >
            <span
              className="c10 c11"
              color="#d94c4c"
              size={16}
            >
              <svg
                data-file-name="SvgExit"
              />
            </span>
          </div>
          <span
            className="c12"
          >
            Skill ends in current state
          </span>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Storyshots Creator/Steps/Exit Step Google 1`] = `
.c11 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #d94c4c;
}

.c11 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c13 .c10 {
  color: #fff;
}

.c14 .c10 {
  color: #6e849a;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c3 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c9 {
  width: 16px;
  margin-right: 16px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c6 .c7:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px rgba(17,49,96,0.08);
}

.c4 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c15 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c12 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

<div
  className="c0"
>
  <header
    className="c1"
  >
    <span
      className="c2"
    >
      Exit Block
    </span>
  </header>
  <section
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5 c6"
      >
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          >
            <span
              className="c10 c11"
              color="#d94c4c"
              size={16}
            >
              <svg
                data-file-name="SvgExit"
              />
            </span>
          </div>
          <span
            className="c12"
          >
            Google Action ends in current state
          </span>
        </div>
      </div>
    </div>
  </section>
</div>
`;
